--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "Cast Finanças",
     "slug": "financas-app",
     "version": "1.1.0",
+    "sdkVersion": "53.0.0",
     "orientation": "portrait",
     "icon": "./src/assets/images/iconCastFinancas.png",
     "scheme": "myapp",
