--- a/package.json
+++ b/package.json
@@ -17,54 +17,55 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@hookform/resolvers": "^4.1.3",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-picker/picker": "2.9.0",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
-    "expo": "~52.0.42",
-    "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.8",
-    "expo-device": "~7.0.3",
-    "expo-font": "~13.0.4",
-    "expo-haptics": "~14.0.1",
-    "expo-image-picker": "~16.0.6",
-    "expo-linking": "~7.0.5",
-    "expo-notifications": "~0.29.14",
-    "expo-print": "~14.0.3",
-    "expo-router": "~4.0.20",
-    "expo-sharing": "~13.0.1",
-    "expo-splash-screen": "~0.29.22",
-    "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.9",
-    "expo-web-browser": "~14.0.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-picker/picker": "2.11.0",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/stack": "^6.3.16",
+    "expo": "~53.0.8",
+    "expo-blur": "~14.1.4",
+    "expo-constants": "~17.1.6",
+    "expo-device": "~7.1.4",
+    "expo-font": "~13.3.1",
+    "expo-haptics": "~14.1.4",
+    "expo-image-picker": "~16.1.4",
+    "expo-linking": "~7.1.4",
+    "expo-notifications": "~0.31.1",
+    "expo-print": "~14.1.4",
+    "expo-router": "~5.0.6",
+    "expo-sharing": "~13.1.5",
+    "expo-splash-screen": "~0.30.8",
+    "expo-sqlite": "~15.2.9",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.4",
+    "expo-system-ui": "~5.0.7",
+    "expo-web-browser": "~14.1.6",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-native": "0.76.9",
+    "react-native": "0.79.2",
     "react-native-calendars": "^1.1310.0",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
     "react-native-view-shot": "~4.0.3",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "zod": "^3.24.2",
-    "expo-sqlite": "~15.1.4"
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.6",
-    "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "jest-expo": "~53.0.5",
+    "react-test-renderer": "19.0.0",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
