--- a/app.json
+++ b/app.json
@@ -2,10 +2,10 @@
   "expo": {
     "name": "Cast Finanças",
     "slug": "financas-app",
-    "version": "1.1.0",
+    "version": "1.9.0",
     "sdkVersion": "53.0.0",
     "orientation": "portrait",
-    "icon": "./src/assets/images/iconCastFinancas.png",
+    "icon": "./src/assets/images/finCast.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -13,14 +13,15 @@
       "supportsTablet": true
     },
     "android": {
+      "permissions": ["NOTIFICATIONS"],
       "adaptiveIcon": {
-        "foregroundImage": "./src/assets/images/adaptive-icon.png",
+        "foregroundImage": "./src/assets/images/finCast.png",
         "backgroundColor": "#ffffff"
       },
       "config": {
         "googleMobileAdsAppId": "ca-app-pub-3940256099942544/6300978111"
       },
-      "versionCode": 2,
+      "versionCode": 13,
       "targetSdkVersion": 34,
       "minSdkVersion": 21,
       "package": "com.jairjr.financasapp"
@@ -35,7 +36,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./src/assets/images/splashIcon.png",
+          "image": "./src/assets/images/finCast.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
