--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "financas-app",
   "main": "expo-router/entry",
-  "version": "1.0.0",
+  "version": "1.8.0",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -20,10 +20,10 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-picker/picker": "2.11.0",
-    "@react-navigation/native": "^6.1.6",
     "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
-    "expo": "~53.0.8",
+    "d3-shape": "^3.2.0",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
     "expo-device": "~7.1.4",
@@ -55,6 +55,7 @@
     "react-native-view-shot": "~4.0.3",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
+    "victory-native": "^41.17.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
